# Hackathon-Kansai-TeamAtlas-Prod

./: .dockerignore  .env.example  .env.production.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/src/api/: deps.py  main.py  middleware.py
backend/src/api/routes/: alerts.py  baseline.py  demo.py  status.py
backend/src/domain/: alert.py  anomaly.py  baseline.py  categories.py  intent.py  ports.py  score.py  sensor.py  status.py
backend/src/errors/: audio.py  base.py  index.py  intent.py  model.py
backend/src/infra/: audio_loader.py  clap_model.py  config.py  faiss_index.py  llm_client.py
backend/src/use_case/: detect_anomaly.py  generate_intent.py  get_status.py  run_detection_loop.py
backend/tests/: conftest.py  test_api.py  test_disappeared_sound.py  test_domain.py  test_middleware.py  test_use_case.py
batch/jobs/: run_embed.py  run_update.py
batch/scripts/: baseline_update.sh  embed_batch.sh
docs/: architecture.md  sequence.md  setup.md
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: AlertList.tsx  Dashboard.tsx  DemoPanel.tsx  ErrorBoundary.tsx  SensorMap.tsx  SoundPulse.tsx
frontend/src/hooks/: useAlerts.ts  useScores.ts  useStatus.ts
frontend/src/lib/: api.ts  config.ts  constants.ts  formatDistance.ts  types.ts  (+1 more)
scripts/: download_dataset.py  download_testdata.py  notify.sh  prepare_streams.py  test_silence.py  test_silence_detect.py
